ATMEGA/STM32/Uart/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:28:06 **** Incremental Build of configuration Debug for project Usart ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:254:21: error: 'z' undeclared (first use in this function)
   sscanf(Rx, "%d", &z);
                     ^
../Core/Src/main.c:254:21: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
22:28:17 **** Incremental Build of configuration Debug for project Usart ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Usart.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\adamj\Desktop\Studia\Semestr_6\WDS\ATMEGA\STM32\Uart\Usart\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Usart.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Usart.elf
 
arm-none-eabi-objdump -h -S  Usart.elf  > "Usart.list"
arm-none-eabi-objcopy  -O binary  Usart.elf  "Usart.bin"
arm-none-eabi-size   Usart.elf 
   text	   data	    bss	    dec	    hex	filename
  20860	    488	   1824	  23172	   5a84	Usart.elf
Finished building: default.size.stdout
 
Finished building: Usart.bin
 
Finished building: Usart.list
 
22:31:42 **** Incremental Build of configuration Debug for project Usart ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:140:3: error: expected ';' before '}' token
   }
   ^
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
22:31:52 **** Incremental Build of configuration Debug for project Usart ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Usart.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\adamj\Desktop\Studia\Semestr_6\WDS\ATMEGA\STM32\Uart\Usart\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Usart.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Usart.elf
 
arm-none-eabi-objdump -h -S  Usart.elf  > "Usart.list"
arm-none-eabi-objcopy  -O binary  Usart.elf  "Usart.bin"
arm-none-eabi-size   Usart.elf 
   text	   data	    bss	    dec	    hex	filename
  22204	    488	   1824	  24516	   5fc4	Usart.elf
Finished building: default.size.stdout
 
Finished building: Usart.bin
 
Finished building: Usart.list
 
